Update Simulation Experiment DTO
